Fixed gwt maven memory issues - see http://stackoverflow.com/questions/10605256/how-would-i-give-the-gwt-compiler-more-memory-when-using-gwt-maven/13170268#13170268